kubernetes/apps/services/immich/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server
  namespace: personal
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-aritrosinha"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app.kubernetes.io/name: immich
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - immich.hyperion.aritrosinha.dpdns.org
      secretName: immich-tls
  rules:
    - host: immich.hyperion.aritrosinha.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
