kubernetes/apps/services/immich/components/ingress/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server
  namespace: personal
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
  labels:
    app.kubernetes.io/name: immich
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - immich.ruth.example.com
      secretName: immich-tls
  rules:
    - host: immich.ruth.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
